# rust-adk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/adk/: Cargo.toml
crates/adk-macros/: Cargo.toml
crates/adk-macros/src/: lib.rs
crates/adk/examples/: macro_example.rs  simple_agent.rs
crates/adk/macros/: Cargo.toml
crates/adk/macros/src/: lib.rs
crates/adk/src/: agent.rs  error.rs  lib.rs  openai.rs  tool.rs  types.rs
crates/adk/tests/: agent_test.rs  error_test.rs  lib_test.rs  tool_test.rs  types_test.rs
examples/: Cargo.toml  simple_agent.rs
examples/src/: main.rs  simple_agent.rs
integration/: Cargo.toml  README.md
integration/tests/: basic_agent_test.rs  macro_test.rs
src/: agent.rs  error.rs  lib.rs  model.rs  tool.rs  types.rs
