[package]
name = "rust-agent-kit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of OpenAI agents kit"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# OpenAI API
async-openai = "0.17"

# Type system utilities
typetag = "0.2"

# Utilities
async-trait = "0.1"
futures = "0.3"
