[workspace]
members = ["crates/adk", "crates/adk-macros", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Gary Y<s14031403@gmail.com>"]
license = "MIT"
repository = "https://github.com/yougigun/rust-adk"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# OpenAI API
async-openai = "0.28"

# Type system utilities
typetag = "0.2"

# Utilities
async-trait = "0.1"
futures = "0.3"
