[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
adk = { path = "../crates/adk" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-openai.workspace = true
typetag.workspace = true
async-trait.workspace = true
futures.workspace = true

[[bin]]
name = "tool_macros"
path = "src/tool_macros.rs"

[[bin]]
name = "simple_agent"
path = "src/simple_agent.rs"
