[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
adk = { path = "../crates/adk" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"

[dev-dependencies]
# Add any test-specific dependencies here if needed
