[package]
name = "adk-macros"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for rust-adk"
authors = ["Gary Y<s14031403@gmail.com>"]
license = "MIT"
repository = "https://github.com/yougigun/rust-adk"

[lib]
proc-macro = true

[dependencies]
adk = { version = "0.2.0", path = "../adk" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
