[package]
name = "adk"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust implementation of ADK(Agent Development Kit)"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-openai.workspace = true
typetag.workspace = true
async-trait.workspace = true
futures.workspace = true

# Internal workspace dependencies
adk-macros = { version = "0.1.0", path = "../adk-macros" }
